# chaincord

./: .gitignore  Cargo.toml  README.md  messages.json  reallycoolmessages.json
src/: amongus.rs  config.rs  discord_types.rs  main.rs  message.rs  utils.rs
src/amongus/: susser.rs
